[package]
name = "generator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
common = { version = "0.1.0", path = "../common" }
db_config = { version = "0.1.0", path = "../configs/db_config" }
disk_config = { version = "0.1.0", path = "../configs/disk_config" }
monitor_config = { version = "0.1.0", path = "../configs/monitor_config" }
rand = "0.8"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde_json = "1.0.149"


