[package]
name = "tests_gen"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
common = { version = "0.1.0", path = "../common" }
monitor_config = { version = "0.1.0", path = "../configs/monitor_config" }
serde_json = "1.0.149"
