[package]
name = "database"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
common = { version = "0.1.0", path = "../common" }
db_config = { version = "0.1.0", path = "../configs/db_config" }
fd_wrapper = {path="../fd_wrapper"}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
